<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/button_r"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/Button_R"/>
        <Button
            android:id="@+id/button_b"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/Button_B"/>
        <Button
            android:id="@+id/button_i"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/Button_I"/>
        <TextView
            android:id="@+id/label"
            android:layout_height="wrap_content"
            android:text="@string/SomeText"
            android:paddingLeft="10px"
            android:layout_width="wrap_content"/>
        <Button
            android:id="@+id/button_plus"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/Button_plus"/>
        <Button
            android:id="@+id/button_minus"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/Button_minus"/>
    </TableRow>
    <EditText
        android:id="@+id/edit_text"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:text="Hello Develloper"/>
</TableLayout>
